[gd_scene load_steps=4 format=3 uid="uid://dqw41fyocuebq"]

[ext_resource type="Script" path="res://Scripts/projectile.gd" id="1_2uuc7"]
[ext_resource type="PackedScene" uid="uid://ddn4r2cx0d5tp" path="res://Scenes/shadow_component.tscn" id="2_mktu6"]

[sub_resource type="SphereShape3D" id="SphereShape3D_nff1b"]

[node name="projectile" type="Node3D"]
top_level = true
script = ExtResource("1_2uuc7")

[node name="projectileSprite" type="Sprite3D" parent="."]
ignore_occlusion_culling = true
pixel_size = 0.08
billboard = 2

[node name="shadowComponent" parent="." instance=ExtResource("2_mktu6")]

[node name="projectileHitbox" type="Area3D" parent="."]
collision_layer = 0

[node name="projectileHitboxCol" type="CollisionShape3D" parent="projectileHitbox"]
shape = SubResource("SphereShape3D_nff1b")

[connection signal="area_entered" from="projectileHitbox" to="." method="_on_projectile_hitbox_area_entered"]
